# rust_crud_app_course_management

./: .env  Cargo.toml  Course Management Minden AI.postman_collection.json  Dockerfile  README.md  Rust CRUD App Course Management.postman_collection.json  docker-compose.yml  schema.rs  wait-for-postgres.sh
migrations/2024-03-17-110613_create_students/: up.sql
migrations/2024-03-17-110624_create_courses/: up.sql
migrations/2024-03-17-110636_create_students_courses/: down.sql  up.sql
migrations/2024-04-16-051342_added_phone_number_nullable_to_students/: down.sql  up.sql
migrations/2024-04-16-054421_add_course_desc_to_courses/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/api/: errors.rs  mod.rs  utils.rs
src/api/courses/: handlers.rs  mod.rs  types.rs
src/api/students/: handlers.rs  mod.rs  types.rs
src/api/students_courses/: handlers.rs  types.rs
src/db/courses/: db_functions.rs  mod.rs  models.rs
src/db/students/: db_functions.rs  models.rs
src/db/students_courses/: db_functions.rs  models.rs
