[package]
name = "course_management_minden_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
derive_more = "0.99.17"
thiserror = "1.0.58"